--- a/layouts/tag.hbs
+++ b/layouts/tag.hbs
@@ -38,37 +38,35 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row title">
-      <h1 class="tag">#Covid-19</h1>
+      <h1 class="tag">{{tag}}</h1>
     </div>
   </div>
 
   <!-- Excerpts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container excerpts">
+    {{#each pagination.files}}
     <div class="row">
       <div class="row">
         <h4 class="row">
-        <a><strong>Difficulty focusing (#1065)</strong></a>
+        <a><strong>{{title}}</strong></a>
         </h4>
         <span class="row sub-heading">
-        <em>13th June 2017 | Approx a 3 mins read</em>
+        <em>{{ moment date lang="en" format="Do MMMM YYYY" }} | {{#if readingTime}} Approximately a {{ readingTime }}{{/if}}</em>
         </span>
       </div>
       <div class="row text">
-        <p>Duis consequat ipsum culpa fugiat dolore cillum anim cillum velit
-          commodo velit aute labore id qui. Et labore excepteur aliqua quis
-          nostrud irure cillum. Est proident occaecat occaecat anim eiusmod
-          labore Lorem aliqua sint culpa aute mollit dolor id adipisicing
-          est. Et veniam laboris excepteur ex laboris esse magna incididunt
-          consequat deserunt cupidatat adipisicing adipisicing in. Nostrud
-          velit fugiat aliquip et esse laboris amet reprehenderit cillum non
-          dolore eu.
-        </p>
+        <p>{{blurp}}</p>
         <a><span>Continue Reading...</span></a>
       </div>
     </div>
+    {{/each}}
   </div>
 
+  <!-- Pagination
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  {{#if pagination.previous}}<a href="{{pagination.previous.path}}">Previous</a>{{/if}}
+  {{#if pagination.next}}<a href="{{pagination.next.path}}">Next</a>{{/if}}
 
 <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
