fixed tag links in blog root

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -47,7 +47,7 @@
       <!-- need loop for tags -->
       <div class="row tags">
         {{#get_keys tags}}
-        <a href="\tags\{{this}}" class="tag">#{{this}}</a>
+        <a href="tags/{{this}}" class="tag">#{{this}}</a>
         {{/get_keys}}
       </div>
   </div>
