--- a/layouts/article.hbs
+++ b/layouts/article.hbs
@@ -25,6 +25,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
+  <base href="https://www.blog.carltonsegbefia.com" />
+
+
 </head>
 
 <body>
