--- a/layouts/tag.hbs
+++ b/layouts/tag.hbs
@@ -16,14 +16,16 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/custom.css">
-  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/custom.css">
+  <link rel="stylesheet" href="../../css/skeleton.css">
 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+
+  <base href="https://www.blog.carltonsegbefia.com" />
 
 </head>
 
@@ -56,8 +58,8 @@
         </span>
       </div>
       <div class="row text">
-        <p>{{blurp}}</p>
-        <a><span>Continue Reading...</span></a>
+        {{{excerpt}}}
+        <a href="./{{path}}" ><span>Continue Reading...</span></a>
       </div>
     </div>
     {{/each}}
