added rss feeds added sitemaps Added some seo tags to templates

--- a/layouts/article.hbs
+++ b/layouts/article.hbs
@@ -6,9 +6,25 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="description" content="This is a description">
+  <title>{{ title }}</title>
+  <meta name="description" content="{{blurb}}">
   <meta name="author" content="This is an author">
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="{{ title }}|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="{{blurb}}" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="{{ title }}|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="{{blurb}}" />
+
+  <meta name="next-head-count" content="10" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
