--- a/layouts/tag.hbs
+++ b/layouts/tag.hbs
@@ -6,9 +6,27 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Home</title>
-  <meta name="description" content="This is a description">
-  <meta name="author" content="This is an author">
+  <title>{{tag}}|Carlton Segbefia's Blog</title>
+  <meta name="description" content="This is an index of articles by Carlton Segbefia around {{tag}}">
+  <meta name="author" content="Carlton Segbefia">
+
+
+  <!-- Other SEO tags
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="og:type" content="website" />
+
+  <meta name="og:title" content="{{tag}}|Carlton Segbefia's Blog" />
+
+  <meta name="og:description" content="This is an index of articles by Carlton Segbefia around {{tag}}" />
+
+  <meta name="twitter:card" content="summary" />
+
+  <meta name="twitter:title" content="{{tag}}|Carlton Segbefia's Blog" />
+
+  <meta name="twitter:description" content="This is an index of articles by Carlton Segbefia around {{tag}}" />
+
+  <meta name="next-head-count" content="10" />
+
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -48,20 +66,20 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container excerpts">
     {{#each pagination.files}}
-    <div class="row">
       <div class="row">
-        <h4 class="row">
-        <a><strong>{{title}}</strong></a>
-        </h4>
-        <span class="row sub-heading">
-        <em>{{ moment date lang="en" format="Do MMMM YYYY" }} | {{#if readingTime}} Approximately a {{ readingTime }}{{/if}}</em>
-        </span>
+        <div class="row">
+          <h4 class="row">
+            <a><strong>{{title}}</strong></a>
+          </h4>
+          <span class="row sub-heading">
+            <em>{{ moment date lang="en" format="Do MMMM YYYY" }} | {{#if readingTime}} Approximately a {{ readingTime }}{{/if}}</em>
+          </span>
+        </div>
+        <div class="row text">
+          {{{excerpt}}}
+          <a href="./{{path}}"><span>Continue Reading...</span></a>
+        </div>
       </div>
-      <div class="row text">
-        {{{excerpt}}}
-        <a href="./{{path}}" ><span>Continue Reading...</span></a>
-      </div>
-    </div>
     {{/each}}
   </div>
 
@@ -70,11 +88,11 @@
   {{#if pagination.previous}}<a href="{{pagination.previous.path}}">Previous</a>{{/if}}
   {{#if pagination.next}}<a href="{{pagination.next.path}}">Next</a>{{/if}}
 
-<!-- Footer
+  <!-- Footer
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-{{> footer }}
+  {{> footer }}
 
-<!-- End Document
+  <!-- End Document
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
