added humans.txt and robots.txt

--- a/layouts/article.hbs
+++ b/layouts/article.hbs
@@ -12,6 +12,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="{{ title }}|Carlton Segbefia's Blog" />
