--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,6 +12,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="Home|Carlton Segbefia's Blog" />
@@ -42,6 +44,8 @@
   <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
 
   <base href="https://www.blog.carltonsegbefia.com" />
+
+
 
 </head>
 
