--- a/layouts/tag.hbs
+++ b/layouts/tag.hbs
@@ -13,6 +13,8 @@
 
   <!-- Other SEO tags
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="author" href="https://blog.carltonsegbefia.com/humans.txt" />
+
   <meta name="og:type" content="website" />
 
   <meta name="og:title" content="{{tag}}|Carlton Segbefia's Blog" />
