--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="container u-max-full-width ">
   <div class="row navbar">
     <div class="two columns u-pull-left site-name">
-      <a href="http://blog.carltonsegbefia.com" >Home</a>
+      <a href="/" >Home</a>
     </div>
     <div class="five columns u-pull-right menu">
       <a href="https://www.carltonsegbefia.com/" >About</a>
