set-up pages for all posts with collections and pagnation

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -64,7 +64,7 @@
       </div>
       <div class="row tags">
         <a href="random" class="tag">#Random</a>
-        <a href="all" class="tag">#Recent</a>
+        <a href="posts" class="tag">#Recent</a>
       </div>
       <!-- need loop for tags -->
       <div class="row tags">
